qt-restricted-extras/qscintilla6/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QImage QImage;
typedef struct QPixmap QPixmap;
typedef struct QsciLexer QsciLexer;
typedef struct QsciScintilla QsciScintilla;
void QsciScintilla_insertAt(QsciScintilla* self, struct miqt_string text, int line, int index);
void QsciScintilla_moveToMatchingBrace(QsciScintilla* self);
void QsciScintilla_paste(QsciScintilla* self);
void QsciScintilla_redo(QsciScintilla* self);
void QsciScintilla_removeSelectedText(QsciScintilla* self);
void QsciScintilla_replaceSelectedText(QsciScintilla* self, struct miqt_string text);
void QsciScintilla_resetSelectionBackgroundColor(QsciScintilla* self);
void QsciScintilla_resetSelectionForegroundColor(QsciScintilla* self);
void QsciScintilla_selectAll(QsciScintilla* self, bool select);
void QsciScintilla_selectToMatchingBrace(QsciScintilla* self);
void QsciScintilla_setAutoCompletionCaseSensitivity(QsciScintilla* self, bool cs);
void QsciScintilla_setAutoCompletionReplaceWord(QsciScintilla* self, bool replace);
void QsciScintilla_setAutoCompletionShowSingle(QsciScintilla* self, bool single);
void QsciScintilla_setAutoCompletionSource(QsciScintilla* self, int source);
void QsciScintilla_setAutoCompletionThreshold(QsciScintilla* self, int thresh);
void QsciScintilla_setAutoCompletionUseSingle(QsciScintilla* self, int single);
void QsciScintilla_setAutoIndent(QsciScintilla* self, bool autoindent);
void QsciScintilla_setBraceMatching(QsciScintilla* self, int bm);
void QsciScintilla_setBackspaceUnindents(QsciScintilla* self, bool unindent);
void QsciScintilla_setCaretForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setCaretLineBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setCaretLineFrameWidth(QsciScintilla* self, int width);
void QsciScintilla_setCaretLineVisible(QsciScintilla* self, bool enable);
void QsciScintilla_setCaretWidth(QsciScintilla* self, int width);
void QsciScintilla_setColor(QsciScintilla* self, QColor* c);
void QsciScintilla_setCursorPosition(QsciScintilla* self, int line, int index);
void QsciScintilla_setEolMode(QsciScintilla* self, int mode);
void QsciScintilla_setEolVisibility(QsciScintilla* self, bool visible);
void QsciScintilla_setFolding(QsciScintilla* self, int fold, int margin);
void QsciScintilla_setIndentation(QsciScintilla* self, int line, int indentation);
void QsciScintilla_setIndentationGuides(QsciScintilla* self, bool enable);
void QsciScintilla_setIndentationGuidesBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setIndentationGuidesForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setIndentationsUseTabs(QsciScintilla* self, bool tabs);
void QsciScintilla_setIndentationWidth(QsciScintilla* self, int width);
void QsciScintilla_setLexer(QsciScintilla* self, QsciLexer* lexer);
void QsciScintilla_setMarginsBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMarginsFont(QsciScintilla* self, QFont* f);
void QsciScintilla_setMarginsForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setMarginLineNumbers(QsciScintilla* self, int margin, bool lnrs);
void QsciScintilla_setMarginMarkerMask(QsciScintilla* self, int margin, int mask);
void QsciScintilla_setMarginSensitivity(QsciScintilla* self, int margin, bool sens);
void QsciScintilla_setMarginWidth(QsciScintilla* self, int margin, int width);
void QsciScintilla_setMarginWidth2(QsciScintilla* self, int margin, struct miqt_string s);
void QsciScintilla_setModified(QsciScintilla* self, bool m);
void QsciScintilla_setPaper(QsciScintilla* self, QColor* c);
void QsciScintilla_setReadOnly(QsciScintilla* self, bool ro);
void QsciScintilla_setSelection(QsciScintilla* self, int lineFrom, int indexFrom, int lineTo, int indexTo);
void QsciScintilla_setSelectionBackgroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setSelectionForegroundColor(QsciScintilla* self, QColor* col);
void QsciScintilla_setTabIndents(QsciScintilla* self, bool indent);
void QsciScintilla_setTabWidth(QsciScintilla* self, int width);
void QsciScintilla_setText(QsciScintilla* self, struct miqt_string text);
void QsciScintilla_setUtf8(QsciScintilla* self, bool cp);
void QsciScintilla_setWhitespaceVisibility(QsciScintilla* self, int mode);
void QsciScintilla_setWrapMode(QsciScintilla* self, int mode);
void QsciScintilla_undo(QsciScintilla* self);
void QsciScintilla_unindent(QsciScintilla* self, int line);
void QsciScintilla_zoomIn(QsciScintilla* self, int range);
void QsciScintilla_zoomIn2(QsciScintilla* self);
void QsciScintilla_zoomOut(QsciScintilla* self, int range);
void QsciScintilla_zoomOut2(QsciScintilla* self);
void QsciScintilla_zoomTo(QsciScintilla* self, int size);
void QsciScintilla_cursorPositionChanged(QsciScintilla* self, int line, int index);
void QsciScintilla_connect_cursorPositionChanged(QsciScintilla* self, intptr_t slot);
void QsciScintilla_copyAvailable(QsciScintilla* self, bool yes);
void QsciScintilla_connect_copyAvailable(QsciScintilla* self, intptr_t slot);
void QsciScintilla_indicatorClicked(QsciScintilla* self, int line, int index, int state);
void QsciScintilla_connect_indicatorClicked(QsciScintilla* self, intptr_t slot);
void QsciScintilla_indicatorReleased(QsciScintilla* self, int line, int index, int state);
void QsciScintilla_connect_indicatorReleased(QsciScintilla* self, intptr_t slot);
void QsciScintilla_linesChanged(QsciScintilla* self);
void QsciScintilla_connect_linesChanged(QsciScintilla* self, intptr_t slot);
void QsciScintilla_marginClicked(QsciScintilla* self, int margin, int line, int state);
void QsciScintilla_connect_marginClicked(QsciScintilla* self, intptr_t slot);
void QsciScintilla_marginRightClicked(QsciScintilla* self, int margin, int line, int state);
void QsciScintilla_connect_marginRightClicked(QsciScintilla* self, intptr_t slot);
void QsciScintilla_modificationAttempted(QsciScintilla* self);
void QsciScintilla_connect_modificationAttempted(QsciScintilla* self, intptr_t slot);
void QsciScintilla_modificationChanged(QsciScintilla* self, bool m);
void QsciScintilla_connect_modificationChanged(QsciScintilla* self, intptr_t slot);
void QsciScintilla_selectionChanged(QsciScintilla* self);
void QsciScintilla_connect_selectionChanged(QsciScintilla* self, intptr_t slot);
void QsciScintilla_textChanged(QsciScintilla* self);
void QsciScintilla_connect_textChanged(QsciScintilla* self, intptr_t slot);
void QsciScintilla_userListActivated(QsciScintilla* self, int id, struct miqt_string string);
void QsciScintilla_connect_userListActivated(QsciScintilla* self, intptr_t slot);
struct miqt_string QsciScintilla_tr2(const char* s, const char* c);
struct miqt_string QsciScintilla_tr3(const char* s, const char* c, int n);
void QsciScintilla_clearAnnotations1(QsciScintilla* self, int line);
int QsciScintilla_indicatorDefine2(QsciScintilla* self, int style, int indicatorNumber);
int QsciScintilla_markerDefine2(QsciScintilla* self, int sym, int markerNumber);
int QsciScintilla_markerDefine22(QsciScintilla* self, char ch, int markerNumber);
int QsciScintilla_markerDefine23(QsciScintilla* self, QPixmap* pm, int markerNumber);
int QsciScintilla_markerDefine24(QsciScintilla* self, QImage* im, int markerNumber);
void QsciScintilla_markerDelete2(QsciScintilla* self, int linenr, int markerNumber);
void QsciScintilla_markerDeleteAll1(QsciScintilla* self, int markerNumber);