qt-restricted-extras/qscintilla6/gen_qsciscintilla.nim

proc fcQsciScintilla_insertAt(self: pointer, text: struct_miqt_string, line: cint, index: cint): void {.importc: "QsciScintilla_insertAt".}
proc fcQsciScintilla_moveToMatchingBrace(self: pointer, ): void {.importc: "QsciScintilla_moveToMatchingBrace".}
proc fcQsciScintilla_paste(self: pointer, ): void {.importc: "QsciScintilla_paste".}
proc fcQsciScintilla_redo(self: pointer, ): void {.importc: "QsciScintilla_redo".}
proc fcQsciScintilla_removeSelectedText(self: pointer, ): void {.importc: "QsciScintilla_removeSelectedText".}
proc fcQsciScintilla_replaceSelectedText(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_replaceSelectedText".}
proc fcQsciScintilla_resetSelectionBackgroundColor(self: pointer, ): void {.importc: "QsciScintilla_resetSelectionBackgroundColor".}
proc fcQsciScintilla_resetSelectionForegroundColor(self: pointer, ): void {.importc: "QsciScintilla_resetSelectionForegroundColor".}
proc fcQsciScintilla_selectAll(self: pointer, select: bool): void {.importc: "QsciScintilla_selectAll".}
proc fcQsciScintilla_selectToMatchingBrace(self: pointer, ): void {.importc: "QsciScintilla_selectToMatchingBrace".}
proc fcQsciScintilla_setAutoCompletionCaseSensitivity(self: pointer, cs: bool): void {.importc: "QsciScintilla_setAutoCompletionCaseSensitivity".}
proc fcQsciScintilla_setAutoCompletionReplaceWord(self: pointer, replace: bool): void {.importc: "QsciScintilla_setAutoCompletionReplaceWord".}
proc fcQsciScintilla_setAutoCompletionShowSingle(self: pointer, single: bool): void {.importc: "QsciScintilla_setAutoCompletionShowSingle".}
proc fcQsciScintilla_setAutoCompletionSource(self: pointer, source: cint): void {.importc: "QsciScintilla_setAutoCompletionSource".}
proc fcQsciScintilla_setAutoCompletionThreshold(self: pointer, thresh: cint): void {.importc: "QsciScintilla_setAutoCompletionThreshold".}
proc fcQsciScintilla_setAutoCompletionUseSingle(self: pointer, single: cint): void {.importc: "QsciScintilla_setAutoCompletionUseSingle".}
proc fcQsciScintilla_setAutoIndent(self: pointer, autoindent: bool): void {.importc: "QsciScintilla_setAutoIndent".}
proc fcQsciScintilla_setBraceMatching(self: pointer, bm: cint): void {.importc: "QsciScintilla_setBraceMatching".}
proc fcQsciScintilla_setBackspaceUnindents(self: pointer, unindent: bool): void {.importc: "QsciScintilla_setBackspaceUnindents".}
proc fcQsciScintilla_setCaretForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setCaretForegroundColor".}
proc fcQsciScintilla_setCaretLineBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setCaretLineBackgroundColor".}
proc fcQsciScintilla_setCaretLineFrameWidth(self: pointer, width: cint): void {.importc: "QsciScintilla_setCaretLineFrameWidth".}
proc fcQsciScintilla_setCaretLineVisible(self: pointer, enable: bool): void {.importc: "QsciScintilla_setCaretLineVisible".}
proc fcQsciScintilla_setCaretWidth(self: pointer, width: cint): void {.importc: "QsciScintilla_setCaretWidth".}
proc fcQsciScintilla_setColor(self: pointer, c: pointer): void {.importc: "QsciScintilla_setColor".}
proc fcQsciScintilla_setCursorPosition(self: pointer, line: cint, index: cint): void {.importc: "QsciScintilla_setCursorPosition".}
proc fcQsciScintilla_setEolMode(self: pointer, mode: cint): void {.importc: "QsciScintilla_setEolMode".}
proc fcQsciScintilla_setEolVisibility(self: pointer, visible: bool): void {.importc: "QsciScintilla_setEolVisibility".}
proc fcQsciScintilla_setFolding(self: pointer, fold: cint, margin: cint): void {.importc: "QsciScintilla_setFolding".}
proc fcQsciScintilla_setIndentation(self: pointer, line: cint, indentation: cint): void {.importc: "QsciScintilla_setIndentation".}
proc fcQsciScintilla_setIndentationGuides(self: pointer, enable: bool): void {.importc: "QsciScintilla_setIndentationGuides".}
proc fcQsciScintilla_setIndentationGuidesBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setIndentationGuidesBackgroundColor".}
proc fcQsciScintilla_setIndentationGuidesForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setIndentationGuidesForegroundColor".}
proc fcQsciScintilla_setIndentationsUseTabs(self: pointer, tabs: bool): void {.importc: "QsciScintilla_setIndentationsUseTabs".}
proc fcQsciScintilla_setIndentationWidth(self: pointer, width: cint): void {.importc: "QsciScintilla_setIndentationWidth".}
proc fcQsciScintilla_setLexer(self: pointer, lexer: pointer): void {.importc: "QsciScintilla_setLexer".}
proc fcQsciScintilla_setMarginsBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setMarginsBackgroundColor".}
proc fcQsciScintilla_setMarginsFont(self: pointer, f: pointer): void {.importc: "QsciScintilla_setMarginsFont".}
proc fcQsciScintilla_setMarginsForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setMarginsForegroundColor".}
proc fcQsciScintilla_setMarginLineNumbers(self: pointer, margin: cint, lnrs: bool): void {.importc: "QsciScintilla_setMarginLineNumbers".}
proc fcQsciScintilla_setMarginMarkerMask(self: pointer, margin: cint, mask: cint): void {.importc: "QsciScintilla_setMarginMarkerMask".}
proc fcQsciScintilla_setMarginSensitivity(self: pointer, margin: cint, sens: bool): void {.importc: "QsciScintilla_setMarginSensitivity".}
proc fcQsciScintilla_setMarginWidth(self: pointer, margin: cint, width: cint): void {.importc: "QsciScintilla_setMarginWidth".}
proc fcQsciScintilla_setMarginWidth2(self: pointer, margin: cint, s: struct_miqt_string): void {.importc: "QsciScintilla_setMarginWidth2".}
proc fcQsciScintilla_setModified(self: pointer, m: bool): void {.importc: "QsciScintilla_setModified".}
proc fcQsciScintilla_setPaper(self: pointer, c: pointer): void {.importc: "QsciScintilla_setPaper".}
proc fcQsciScintilla_setReadOnly(self: pointer, ro: bool): void {.importc: "QsciScintilla_setReadOnly".}
proc fcQsciScintilla_setSelection(self: pointer, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint): void {.importc: "QsciScintilla_setSelection".}
proc fcQsciScintilla_setSelectionBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setSelectionBackgroundColor".}
proc fcQsciScintilla_setSelectionForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_setSelectionForegroundColor".}
proc fcQsciScintilla_setTabIndents(self: pointer, indent: bool): void {.importc: "QsciScintilla_setTabIndents".}
proc fcQsciScintilla_setTabWidth(self: pointer, width: cint): void {.importc: "QsciScintilla_setTabWidth".}
proc fcQsciScintilla_setText(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_setText".}
proc fcQsciScintilla_setUtf8(self: pointer, cp: bool): void {.importc: "QsciScintilla_setUtf8".}
proc fcQsciScintilla_setWhitespaceVisibility(self: pointer, mode: cint): void {.importc: "QsciScintilla_setWhitespaceVisibility".}
proc fcQsciScintilla_setWrapMode(self: pointer, mode: cint): void {.importc: "QsciScintilla_setWrapMode".}
proc fcQsciScintilla_undo(self: pointer, ): void {.importc: "QsciScintilla_undo".}
proc fcQsciScintilla_unindent(self: pointer, line: cint): void {.importc: "QsciScintilla_unindent".}
proc fcQsciScintilla_zoomIn(self: pointer, range: cint): void {.importc: "QsciScintilla_zoomIn".}
proc fcQsciScintilla_zoomIn2(self: pointer, ): void {.importc: "QsciScintilla_zoomIn2".}
proc fcQsciScintilla_zoomOut(self: pointer, range: cint): void {.importc: "QsciScintilla_zoomOut".}
proc fcQsciScintilla_zoomOut2(self: pointer, ): void {.importc: "QsciScintilla_zoomOut2".}
proc fcQsciScintilla_zoomTo(self: pointer, size: cint): void {.importc: "QsciScintilla_zoomTo".}
proc fcQsciScintilla_cursorPositionChanged(self: pointer, line: cint, index: cint): void {.importc: "QsciScintilla_cursorPositionChanged".}
proc fQsciScintilla_connect_cursorPositionChanged(self: pointer, slot: int) {.importc: "QsciScintilla_connect_cursorPositionChanged".}
proc fcQsciScintilla_copyAvailable(self: pointer, yes: bool): void {.importc: "QsciScintilla_copyAvailable".}
proc fQsciScintilla_connect_copyAvailable(self: pointer, slot: int) {.importc: "QsciScintilla_connect_copyAvailable".}
proc fcQsciScintilla_indicatorClicked(self: pointer, line: cint, index: cint, state: cint): void {.importc: "QsciScintilla_indicatorClicked".}
proc fQsciScintilla_connect_indicatorClicked(self: pointer, slot: int) {.importc: "QsciScintilla_connect_indicatorClicked".}
proc fcQsciScintilla_indicatorReleased(self: pointer, line: cint, index: cint, state: cint): void {.importc: "QsciScintilla_indicatorReleased".}
proc fQsciScintilla_connect_indicatorReleased(self: pointer, slot: int) {.importc: "QsciScintilla_connect_indicatorReleased".}
proc fcQsciScintilla_linesChanged(self: pointer, ): void {.importc: "QsciScintilla_linesChanged".}
proc fQsciScintilla_connect_linesChanged(self: pointer, slot: int) {.importc: "QsciScintilla_connect_linesChanged".}
proc fcQsciScintilla_marginClicked(self: pointer, margin: cint, line: cint, state: cint): void {.importc: "QsciScintilla_marginClicked".}
proc fQsciScintilla_connect_marginClicked(self: pointer, slot: int) {.importc: "QsciScintilla_connect_marginClicked".}
proc fcQsciScintilla_marginRightClicked(self: pointer, margin: cint, line: cint, state: cint): void {.importc: "QsciScintilla_marginRightClicked".}
proc fQsciScintilla_connect_marginRightClicked(self: pointer, slot: int) {.importc: "QsciScintilla_connect_marginRightClicked".}
proc fcQsciScintilla_modificationAttempted(self: pointer, ): void {.importc: "QsciScintilla_modificationAttempted".}
proc fQsciScintilla_connect_modificationAttempted(self: pointer, slot: int) {.importc: "QsciScintilla_connect_modificationAttempted".}
proc fcQsciScintilla_modificationChanged(self: pointer, m: bool): void {.importc: "QsciScintilla_modificationChanged".}
proc fQsciScintilla_connect_modificationChanged(self: pointer, slot: int) {.importc: "QsciScintilla_connect_modificationChanged".}
proc fcQsciScintilla_selectionChanged(self: pointer, ): void {.importc: "QsciScintilla_selectionChanged".}
proc fQsciScintilla_connect_selectionChanged(self: pointer, slot: int) {.importc: "QsciScintilla_connect_selectionChanged".}
proc fcQsciScintilla_textChanged(self: pointer, ): void {.importc: "QsciScintilla_textChanged".}
proc fQsciScintilla_connect_textChanged(self: pointer, slot: int) {.importc: "QsciScintilla_connect_textChanged".}
proc fcQsciScintilla_userListActivated(self: pointer, id: cint, string: struct_miqt_string): void {.importc: "QsciScintilla_userListActivated".}
proc fQsciScintilla_connect_userListActivated(self: pointer, slot: int) {.importc: "QsciScintilla_connect_userListActivated".}
proc fcQsciScintilla_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciScintilla_tr2".}
proc fcQsciScintilla_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciScintilla_tr3".}
proc fcQsciScintilla_clearAnnotations1(self: pointer, line: cint): void {.importc: "QsciScintilla_clearAnnotations1".}
proc fcQsciScintilla_indicatorDefine2(self: pointer, style: cint, indicatorNumber: cint): cint {.importc: "QsciScintilla_indicatorDefine2".}
proc fcQsciScintilla_markerDefine2(self: pointer, sym: cint, markerNumber: cint): cint {.importc: "QsciScintilla_markerDefine2".}
proc fcQsciScintilla_markerDefine22(self: pointer, ch: cchar, markerNumber: cint): cint {.importc: "QsciScintilla_markerDefine22".}
proc fcQsciScintilla_markerDefine23(self: pointer, pm: pointer, markerNumber: cint): cint {.importc: "QsciScintilla_markerDefine23".}
proc fcQsciScintilla_markerDefine24(self: pointer, im: pointer, markerNumber: cint): cint {.importc: "QsciScintilla_markerDefine24".}
proc fcQsciScintilla_markerDelete2(self: pointer, linenr: cint, markerNumber: cint): void {.importc: "QsciScintilla_markerDelete2".}
proc fcQsciScintilla_markerDeleteAll1(self: pointer, markerNumber: cint): void {.importc: "QsciScintilla_markerDeleteAll1".}
